@@ -952,6 +952,30 @@ WandExport MagickBooleanType MogrifyImage(ImageInfo *image_info,const int argc,
               exception);
             break;
           }
+        if (LocaleCompare("brightness-contrast",option+1) == 0)
+          {
+            double
+              brightness,
+              contrast;
+
+            GeometryInfo
+              geometry_info;
+
+            MagickStatusType
+              flags;
+
+            /*
+              Brightness / contrast image.
+            */
+            (void) SyncImageSettings(image_info,*image);
+            flags=ParseGeometry(argv[i+1],&geometry_info);
+            brightness=geometry_info.rho;
+            if ((flags & SigmaValue) != 0)
+              contrast=geometry_info.sigma;
+            (void) BrightnessImageChannel(*image,channel,brightness,contrast);
+            InheritException(exception,&(*image)->exception);
+            break;
+          }
         break;
       }
       case 'c':
@@ -3569,6 +3593,8 @@ static MagickBooleanType MogrifyUsage(void)
       "-blur geometry       reduce image noise and reduce detail levels",
       "-border geometry     surround image with a border of color",
       "-bordercolor color   border color",
+      "-brightness-contrast geometry",
+      "                     improve brightness / contrast of the image",
       "-cdl filename        color correct with a color decision list",
       "-charcoal radius     simulate a charcoal drawing",
       "-chop geometry       remove pixels from the image interior",
@@ -4240,6 +4266,15 @@ WandExport MagickBooleanType MogrifyImageCommand(ImageInfo *image_info,
             i++;
             if (i == (long) argc)
               ThrowMogrifyException(OptionError,"MissingArgument",option);
+            break;
+          }
+        if (LocaleCompare("brightness-contrast",option+1) == 0)
+          {
+            i++;
+            if (i == (long) argc)
+              ThrowMogrifyException(OptionError,"MissingArgument",option);
+            if (IsGeometry(argv[i]) == MagickFalse)
+              ThrowMogrifyInvalidArgumentException(option,argv[i]);
             break;
           }
         ThrowMogrifyException(OptionError,"UnrecognizedOption",option)
